Closed
Bug 1722232
Opened 4 years ago
Closed 4 years ago
Revert the local cairo fix from bug 1717685 and take the version that was merged upstream in preference
Categories
(Core :: Graphics, defect)
Core
Graphics
Tracking
()
RESOLVED
FIXED
92 Branch
| Tracking | Status | |
|---|---|---|
| firefox92 | --- | fixed |
People
(Reporter: jfkthame, Assigned: jfkthame)
References
Details
Attachments
(1 file)
In bug 1717685 we landed a patch to avoid a spurious cairo assertion that fuzz-testing found. After discussion with the upstream developers, a slightly different version of the fix was applied in https://gitlab.freedesktop.org/cairo/cairo/-/merge_requests/195.
(The original fix in bug 1717685 may be flawed because it fails to set the command->header.region field; I guess this could lead to subsequent incorrect behavior/rendering, though in practice this probably only happens on testcases with such extreme coordinates/transforms that no sensible rendering is likely anyhow.)
| Assignee | ||
Comment 1•4 years ago
|
||
Updated•4 years ago
|
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Pushed by jkew@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f02e38dccb1c
Revert changeset 5689add84fe2 (bug 1717685) and take the upstream version of the fix from https://gitlab.freedesktop.org/cairo/cairo/-/merge_requests/195 instead. r=jrmuizel
Comment 3•4 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
status-firefox92:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 92 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•