Bug 1722232 - Revert changeset 5689add84fe2 (bug 1717685) and take the upstream version of the fix from https://gitlab.freedesktop.org/cairo/cairo/-/merge_requests/195 instead. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D120801